2016/12/20 bt zaki 提交一个工程设置，禁用pak等

--- a/SurvivalGame/Config/DefaultEngine.ini
+++ b/SurvivalGame/Config/DefaultEngine.ini
@@ -108,13 +108,13 @@ bRebuildAtRuntime=True
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/CoopLandscape_Map
 LocalMapOptions=
-TransitionMap=
+TransitionMap=/Game/Maps/ContainerCity.ContainerCity
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Maps/MainMenu_Entry
-ServerDefaultMap=/Game/Maps/MainMenu_Entry
+GameDefaultMap=/Game/Maps/ContainerCity.ContainerCity
+ServerDefaultMap=/Game/Maps/ContainerCity.ContainerCity
 GlobalDefaultGameMode=/Game/Base/SurvivalCoopGameModeSetup.SurvivalCoopGameModeSetup_C
-GlobalDefaultServerGameMode=None
+GlobalDefaultServerGameMode=/Game/Base/SurvivalCoopGameModeSetup.SurvivalCoopGameModeSetup_C
 
