--- a/SurvivalGame/Config/DefaultGame.ini
+++ b/SurvivalGame/Config/DefaultGame.ini
@@ -12,3 +12,8 @@ SupportContact=
 ProjectDisplayedTitle=Survival SampleGame
 
 
+
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+UsePakFile=False
+
