2016/12/29 by zaki 增加子弹碰撞类型

--- a/SurvivalGame/Config/DefaultEngine.ini
+++ b/SurvivalGame/Config/DefaultEngine.ini
@@ -104,11 +104,15 @@ bRebuildAtRuntime=True
 ; customized game channel
 ; if you do this, make sure you define in native for convenience
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1, Name=Weapon, bTraceType=true)
++DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,Name="Projectile",DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False)
+
++Profiles=(Name="Projectile",CollisionEnabled=QueryOnly,ObjectTypeName="Projectile",CustomResponses=,HelpMessage="Preset for projectiles",bCanModify=True)
++EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/CoopLandscape_Map
 LocalMapOptions=
-TransitionMap=/Game/Maps/ContainerCity.ContainerCity
+TransitionMap=None
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
