2017/1/12 by zaki 提交配置文件，增加碰撞类型

--- a/SurvivalGame/Config/DefaultGame.ini
+++ b/SurvivalGame/Config/DefaultGame.ini
@@ -10,10 +10,7 @@ ProjectName=Survival Sample Game
 ProjectVersion=
 SupportContact=
 ProjectDisplayedTitle=Survival SampleGame
-
-
-
+bStartInVR=True
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 UsePakFile=False
-
