--- a/SurvivalGame/Config/DefaultEngine.ini
+++ b/SurvivalGame/Config/DefaultEngine.ini
@@ -110,7 +110,7 @@ bRebuildAtRuntime=True
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/CoopLandscape_Map
+EditorStartupMap=/Game/Maps/ContainerCity.ContainerCity
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
