修改启动地图，尝试通过命令行链接到服务器

--- a/SurvivalGame/Config/DefaultEngine.ini
+++ b/SurvivalGame/Config/DefaultEngine.ini
@@ -110,15 +110,15 @@ bRebuildAtRuntime=True
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/ContainerCity.ContainerCity
+EditorStartupMap=/Game/Maps/MainMenu_Entry.MainMenu_Entry
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Maps/ContainerCity.ContainerCity
+GameDefaultMap=/Game/Maps/MainMenu_Entry.MainMenu_Entry
 ServerDefaultMap=/Game/Maps/ContainerCity.ContainerCity
-GlobalDefaultGameMode=/Game/Base/SurvivalCoopGameModeSetup.SurvivalCoopGameModeSetup_C
+GlobalDefaultGameMode=/Game/LCH/NewGameMode.NewGameMode_C
 GlobalDefaultServerGameMode=/Game/Base/SurvivalCoopGameModeSetup.SurvivalCoopGameModeSetup_C
 
