--- a/SurvivalGame/Config/DefaultEngine.ini
+++ b/SurvivalGame/Config/DefaultEngine.ini
@@ -118,7 +118,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/Maps/MainMenu_Entry.MainMenu_Entry
-ServerDefaultMap=/Game/Maps/ContainerCity.ContainerCity
+ServerDefaultMap=/Game/Maps/CoopLandscape_Map.CoopLandscape_Map
 GlobalDefaultGameMode=/Game/LCH/NewGameMode.NewGameMode_C
 GlobalDefaultServerGameMode=/Game/Base/SurvivalCoopGameModeSetup.SurvivalCoopGameModeSetup_C
 
